# xtask-template

./: .gitignore  Cargo.toml  README.md
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
