[package]
name = "xtask-template"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.speed]
inherits = "release"
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
